[Will] finish integration test
