# swagger.json
@@ -133,9 +133,6 @@
           },
           "403": {
             "description": "Access denied!"
-          },
-          "404": {
-            "description": "User not found!"
           }
         },
         "security": [
@@ -173,17 +170,11 @@
           "201": {
             "description": "Todo list created!"
           },
-          "400": {
-            "description": "Failed to save todo list!"
-          },
           "401": {
             "description": "Please insert token!"
           },
           "403": {
             "description": "Access denied!"
-          },
-          "404": {
-            "description": "User not found!"
           },
           "422": {
             "description": "Unexpected error!"
@@ -218,9 +209,6 @@
           },
           "403": {
             "description": "Access denied!"
-          },
-          "422": {
-            "description": "Unexpected error!"
           }
         },
         "security": [
@@ -260,9 +248,6 @@
           },
           "403": {
             "description": "Access denied!"
-          },
-          "404": {
-            "description": "Todo list not found!"
           }
         },
         "security": [
@@ -311,8 +296,8 @@
           "403": {
             "description": "Access denied!"
           },
-          "422": {
-            "description": "Unexpected error!"
+          "404": {
+            "description": "To do list not found!"
           }
         },
         "security": [
@@ -346,12 +331,6 @@
         "responses": {
           "200": {
             "description": "Todo list deleted!"
-          },
-          "404": {
-            "description": "Todo list not found!"
-          },
-          "422": {
-            "description": "Unexpected error!"
           }
         },
         "security": [
